# eth-binary-tree

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
binary-tree/: Cargo.toml
binary-tree/src/: hasher.rs  lib.rs  node.rs  tree.rs  types.rs
hash-bench/: Cargo.toml
hash-bench/benches/: hashes.rs
